📚 Auto-update: News data refreshed - 2026-01-09 15:13 UTC

--- a/knowledge_base.json
+++ b/knowledge_base.json
@@ -48438,5 +48438,109 @@
         "published": "Fri, 09 Jan 2026 13:41:17 GMT",
         "source": "YourStory RSS Feed",
         "summary": "Myntra has introduced a zero-commission model for new homegrown D2C brands joining its \"Myntra Rising Stars\" programme."
+    },
+    {
+        "id": "https://www.theverge.com/tech/859132/optimizer-ces-2026-metabolism-bodily-fluids-health-tech-wearables",
+        "title": "CES 2026 was awash in bodily fluids",
+        "link": "https://www.theverge.com/tech/859132/optimizer-ces-2026-metabolism-bodily-fluids-health-tech-wearables",
+        "published": "2026-01-09T10:00:00-05:00",
+        "source": "The Verge",
+        "summary": "This is Optimizer, a weekly newsletter sent every Friday from Verge senior reviewer Victoria Song that dissects and discusses the latest phones, smartwatches, apps, and other gizmos that swear they're going to change your life. Optimizer arrives in our subscribers' inboxes at 10AM ET. Opt in for Optimizer here. At CES 2026 this week, people [&#8230;]"
+    },
+    {
+        "id": "https://www.theverge.com/podcast/859370/ces-2026-best-tech-vergecast",
+        "title": "The Vergecast Live at CES 2026: What is the point of a robot that falls over?",
+        "link": "https://www.theverge.com/podcast/859370/ces-2026-best-tech-vergecast",
+        "published": "2026-01-09T09:23:06-05:00",
+        "source": "The Verge",
+        "summary": "This year's CES was an odd one. This is a conference usually dominated by futuristic, expensive TVs and futuristic, expensive cars, but those things weren't what dominated CES 2026. Instead, Las Vegas was filled with new ideas about old gadgets and showed us a whole lot of really impressive hardware waiting on software to catch [&#8230;]"
+    },
+    {
+        "id": "https://arstechnica.com/culture/2026/01/ungentrified-craigslist-may-be-the-last-real-place-on-the-internet/",
+        "title": "\u201cUngentrified\u201d Craigslist may be the last real place on the Internet",
+        "link": "https://arstechnica.com/culture/2026/01/ungentrified-craigslist-may-be-the-last-real-place-on-the-internet/",
+        "published": "Fri, 09 Jan 2026 14:56:59 +0000",
+        "source": "Ars Technica - All content",
+        "summary": "People still use Craigslist to find jobs, love, and even to cast creative projects."
+    },
+    {
+        "id": "https://arstechnica.com/cars/2026/01/fewer-american-evs-costs-gm-6-billion-even-as-its-chinese-sales-boom/",
+        "title": "General Motors writes down $6 billion as domestic EV sales plans change",
+        "link": "https://arstechnica.com/cars/2026/01/fewer-american-evs-costs-gm-6-billion-even-as-its-chinese-sales-boom/",
+        "published": "Fri, 09 Jan 2026 14:02:41 +0000",
+        "source": "Ars Technica - All content",
+        "summary": "Canceled contracts and scaled-back product plans turn out to be costly."
+    },
+    {
+        "id": "https://www.engadget.com/ai/sharpas-ping-pong-playing-blackjack-dealing-humanoid-is-working-overtime-at-ces-2026-150000488.html?src=rss",
+        "title": "Sharpa's ping-pong playing, blackjack dealing humanoid is working overtime at CES 2026",
+        "link": "https://www.engadget.com/ai/sharpas-ping-pong-playing-blackjack-dealing-humanoid-is-working-overtime-at-ces-2026-150000488.html?src=rss",
+        "published": "Fri, 09 Jan 2026 15:00:00 +0000",
+        "source": "Engadget is a web magazine with obsessive daily coverage of everything new in gadgets and consumer electronics",
+        "summary": "<p>There were no idle hands at Sharpa's CES booth. The company's humanoid may have been the busiest bot at show, autonomously playing ping-pong, dealing blackjack games and taking selfies with passersby. On display wasn't just the robot and its smarts, but also SharpaWave, a highly dexterous 1:1 scale human hand.&nbsp;</p><div><div></div></div><p>The hand has 22 active degrees of freedom, according to the company, allowing for precise and intricate finger movements. It mirrored my gestures as I "
+    },
+    {
+        "id": "https://www.engadget.com/deals/the-new-anker-45w-nano-charger-with-smart-display-from-ces-is-10-off-already-160707620.html?src=rss",
+        "title": "The new Anker 45W Nano charger with smart display from CES is $10 off already",
+        "link": "https://www.engadget.com/deals/the-new-anker-45w-nano-charger-with-smart-display-from-ces-is-10-off-already-160707620.html?src=rss",
+        "published": "Fri, 09 Jan 2026 14:46:26 +0000",
+        "source": "Engadget is a web magazine with obsessive daily coverage of everything new in gadgets and consumer electronics",
+        "summary": "<p>Anker rolled out a bunch of <a href=\"https://www.engadget.com/computing/accessories/anker-unveils-a-new-lineup-of-chargers-and-docks-at-ces-2026-160021195.html\">new chargers</a> and other gear at <a href=\"https://www.engadget.com/general/everything-announced-at-ces-2026-130124802.html\">CES 2026</a>, including a cute one that's already on sale. The new Nano charger with smart display, which is an upgrade to the existing Nano charger in Anker's lineup, is on sale for $30 right now while you can"
+    },
+    {
+        "id": "https://www.engadget.com/deals/airtag-deal-get-four-of-the-bluetooth-trackers-for-only-65-202333516.html?src=rss",
+        "title": "AirTag deal: Get four of the Bluetooth trackers for only $65",
+        "link": "https://www.engadget.com/deals/airtag-deal-get-four-of-the-bluetooth-trackers-for-only-65-202333516.html?src=rss",
+        "published": "Fri, 09 Jan 2026 14:15:36 +0000",
+        "source": "Engadget is a web magazine with obsessive daily coverage of everything new in gadgets and consumer electronics",
+        "summary": "<p>Apple keeps most of its product pricing on a tight leash, but we do see the company's AirTags go on sale pretty frequently. Another cost cut has come around for this item just in time for the holidays. Amazon is currently selling a four-pack of <a class=\"rapid-with-clickid\" href=\"https://shopping.yahoo.com/rdlw?merchantId=66ea567a-c987-4c2e-a2ff-02904efde6ea&amp;itemId=amazon_B0D54JZTHY&amp;siteId=us-engadget&amp;pageId=1p-autolink&amp;contentUuid=24b60c33-f851-4bee-9d8b-9c00c8cc034a&amp;feat"
+    },
+    {
+        "id": "https://help.kagi.com/orion/misc/linux-status.html",
+        "title": "Kagi releases alpha version of Orion for Linux",
+        "link": "https://help.kagi.com/orion/misc/linux-status.html",
+        "published": "Fri, 09 Jan 2026 12:54:48 +0000",
+        "source": "Hacker News",
+        "summary": "<a href=\"https://news.ycombinator.com/item?id=46553343\">Comments</a>"
+    },
+    {
+        "id": "https://en.wikipedia.org/wiki/London%E2%80%93Calcutta_bus_service",
+        "title": "London\u2013Calcutta Bus Service",
+        "link": "https://en.wikipedia.org/wiki/London%E2%80%93Calcutta_bus_service",
+        "published": "Fri, 09 Jan 2026 14:50:48 +0000",
+        "source": "Hacker News",
+        "summary": "<a href=\"https://news.ycombinator.com/item?id=46554462\">Comments</a>"
+    },
+    {
+        "id": "https://economictimes.indiatimes.com/tech/artificial-intelligence/deepseek-to-launch-new-ai-model-focused-on-coding-in-february-report/articleshow/126438150.cms",
+        "title": "DeepSeek to launch new AI model focused on coding in February: Report",
+        "link": "https://economictimes.indiatimes.com/tech/artificial-intelligence/deepseek-to-launch-new-ai-model-focused-on-coding-in-february-report/articleshow/126438150.cms",
+        "published": "Fri, 09 Jan 2026 20:08:10 +0530",
+        "source": "Tech-Economic Times",
+        "summary": "Chinese AI firm DeepSeek is reportedly preparing to release its new V4 model next month. This advanced AI is expected to excel in coding tasks, possibly surpassing competitors. A key feature is its ability to process very long coding instructions. This development could significantly benefit developers working on complex software projects."
+    },
+    {
+        "id": "https://economictimes.indiatimes.com/tech/startups/skydo-receives-final-rbi-nod-to-operate-as-cross-border-payment-aggregator/articleshow/126438134.cms",
+        "title": "Skydo receives final RBI nod to operate as cross-border payment aggregator",
+        "link": "https://economictimes.indiatimes.com/tech/startups/skydo-receives-final-rbi-nod-to-operate-as-cross-border-payment-aggregator/articleshow/126438134.cms",
+        "published": "Fri, 09 Jan 2026 20:07:14 +0530",
+        "source": "Tech-Economic Times",
+        "summary": "With the approval, Skydo joins a group of fintech firms that have secured the licence since the RBI introduced the PA-CB regime for tighter oversight of cross-border payment flows. Other companies that have secured the licence include Razorpay, Cashfree Payments, Amazon Pay, BillDesk, and Adyen."
+    },
+    {
+        "id": "https://economictimes.indiatimes.com/tech/artificial-intelligence/india-a-key-growth-engine-for-snowflake-ceo-sridhar-ramaswamy/articleshow/126437950.cms",
+        "title": "India a key growth engine for Snowflake: CEO Sridhar Ramaswamy",
+        "link": "https://economictimes.indiatimes.com/tech/artificial-intelligence/india-a-key-growth-engine-for-snowflake-ceo-sridhar-ramaswamy/articleshow/126437950.cms",
+        "published": "Fri, 09 Jan 2026 19:54:19 +0530",
+        "source": "Tech-Economic Times",
+        "summary": "Snowflake CEO Sridhar Ramaswamy added that the company is making investments in the country to build an AI-ready workforce, noting that it has a large team in Pune and offices in Delhi and Bengaluru."
+    },
+    {
+        "id": "https://economictimes.indiatimes.com/tech/newsletters/tech-top-5/softbank-pares-ola-electric-stake-snowflake-ceo-on-ai-search/articleshow/126436754.cms",
+        "title": "SoftBank pares Ola Electric stake; Snowflake CEO on AI &amp; search",
+        "link": "https://economictimes.indiatimes.com/tech/newsletters/tech-top-5/softbank-pares-ola-electric-stake-snowflake-ceo-on-ai-search/articleshow/126436754.cms",
+        "published": "Fri, 09 Jan 2026 19:05:48 +0530",
+        "source": "Tech-Economic Times",
+        "summary": "SoftBank continues its Ola Electric selling spree. This and more in today's ETtech Top 5."
     }
 ]
