--- a/tech-news-frontend/public/knowledge_base.json
+++ b/tech-news-frontend/public/knowledge_base.json
@@ -48542,5 +48542,93 @@
         "published": "Fri, 09 Jan 2026 19:05:48 +0530",
         "source": "Tech-Economic Times",
         "summary": "SoftBank continues its Ola Electric selling spree. This and more in today's ETtech Top 5."
+    },
+    {
+        "id": "https://www.theverge.com/gadgets/859486/anker-aerofit-pro-2-earbuds-donkey-kong-bananza-elgato-deal-sale",
+        "title": "Anker\u2019s new AeroFit Pro 2 earbuds are already $30 off",
+        "link": "https://www.theverge.com/gadgets/859486/anker-aerofit-pro-2-earbuds-donkey-kong-bananza-elgato-deal-sale",
+        "published": "2026-01-09T11:04:49-05:00",
+        "source": "The Verge",
+        "summary": "We saw a ton of cool new products at CES 2026, but not all of them made the cut when it came to deciding what was best of show. One of those products that we nevertheless think holds promise is Anker\u2019s AeroFit Pro 2, which are wireless earbuds that can double as open-ear headphones. You [&#8230;]"
+    },
+    {
+        "id": "https://www.theverge.com/tech/859493/nimble-champ-stack-10k-power-bank-shareable",
+        "title": "You can break apart and share this 10K power bank like a KitKat bar",
+        "link": "https://www.theverge.com/tech/859493/nimble-champ-stack-10k-power-bank-shareable",
+        "published": "2026-01-09T10:32:28-05:00",
+        "source": "The Verge",
+        "summary": "Accessory maker Nimble announced a new power bank at CES 2026 that will appeal to anyone who's had to reluctantly share or loan their portable charger to someone else. The Champ Stack 10K looks like a typical 10,000mAh power bank that's jumped on the built-in charging cable bandwagon, but it has one interesting difference: you [&#8230;]"
+    },
+    {
+        "id": "https://www.wired.com/story/backchannel-silicon-valley-billionaires-california-taxes/",
+        "title": "Silicon Valley Billionaires Panic Over California\u2019s Proposed Wealth Tax",
+        "link": "https://www.wired.com/story/backchannel-silicon-valley-billionaires-california-taxes/",
+        "published": "Fri, 09 Jan 2026 16:00:00 +0000",
+        "source": "WIRED",
+        "summary": "Larry Page\u2019s apparent Florida move highlights how seriously the ultra-rich are taking a one-time tax aimed at extreme wealth inequality."
+    },
+    {
+        "id": "https://www.wired.com/story/x-didnt-fix-groks-undressing-problem-it-just-makes-people-pay-for-it/",
+        "title": "X Didn't Fix Grok's \u2018Undressing\u2019 Problem. It Just Makes People Pay for It",
+        "link": "https://www.wired.com/story/x-didnt-fix-groks-undressing-problem-it-just-makes-people-pay-for-it/",
+        "published": "Fri, 09 Jan 2026 15:19:18 +0000",
+        "source": "WIRED",
+        "summary": "X is only allowing \u201cverified\u201d users to create images with Grok. Experts say it represents the \u201cmonetization of abuse\u201d\u2014and anyone can still generate images on Grok\u2019s app and website."
+    },
+    {
+        "id": "https://arstechnica.com/space/2026/01/rocket-report-spacex-and-china-led-the-way-in-2025-vandenberg-has-room-to-grow/",
+        "title": "Rocket Report: SpaceX and China led the way in 2025; Vandenberg has room to grow",
+        "link": "https://arstechnica.com/space/2026/01/rocket-report-spacex-and-china-led-the-way-in-2025-vandenberg-has-room-to-grow/",
+        "published": "Fri, 09 Jan 2026 15:50:25 +0000",
+        "source": "Ars Technica - All content",
+        "summary": "SpaceX opened its 2026 launch campaign with a mission for the Italian government."
+    },
+    {
+        "id": "https://www.engadget.com/ces-2026-offered-a-lonely-vision-of-the-future-160000993.html?src=rss",
+        "title": "CES 2026 offered a lonely vision of the future",
+        "link": "https://www.engadget.com/ces-2026-offered-a-lonely-vision-of-the-future-160000993.html?src=rss",
+        "published": "Fri, 09 Jan 2026 16:00:00 +0000",
+        "source": "Engadget is a web magazine with obsessive daily coverage of everything new in gadgets and consumer electronics",
+        "summary": "<p><a class=\"link\" href=\"https://www.engadget.com/home/lg-at-ces-2026-live-updates-from-the-companys-world-premiere-event-190159076.html\" target=\"_blank\">LG opened CES 2026</a> by outlining its vision to reduce the physical effort and mental burden of life. Buy enough of the devices it\u2019s presently working on and you\u2019ll exist in an environment of \u201cambient care,\u201d coddled by the machinery in your home. It sounds positively utopian: When the sensors in your bed know you\u2019ve not slept well and are get"
+    },
+    {
+        "id": "https://www.engadget.com/deals/this-apple-25w-magsafe-charger-is-on-sale-for-only-30-141707593.html?src=rss",
+        "title": "This Apple 25W MagSafe charger is on sale for only $30",
+        "link": "https://www.engadget.com/deals/this-apple-25w-magsafe-charger-is-on-sale-for-only-30-141707593.html?src=rss",
+        "published": "Fri, 09 Jan 2026 15:10:35 +0000",
+        "source": "Engadget is a web magazine with obsessive daily coverage of everything new in gadgets and consumer electronics",
+        "summary": "<p>If you want a wireless charger for your iPhone and prefer to stick with Apple, Amazon has a sale that may pique your interest. The retailer is selling the one meter Apple Magsafe charger <a class=\"rapid-with-clickid\" href=\"https://shopping.yahoo.com/rdlw?merchantId=66ea567a-c987-4c2e-a2ff-02904efde6ea&amp;itemId=amazon_B0FQFTXT7K&amp;siteId=us-engadget&amp;pageId=1p-autolink&amp;contentUuid=2ce1496f-1e48-428a-bb64-aefda025bc79&amp;featureId=text-link&amp;merchantName=Amazon&amp;linkText=for+%"
+    },
+    {
+        "id": "https://www.stanfordlawreview.org/wp-content/uploads/sites/3/2012/05/Kahan-64-Stan-L-Rev-851.pdf",
+        "title": "\"They Saw a Protest\": Cognitive Illiberalism and the Speech-Conduct Distinction [pdf]",
+        "link": "https://www.stanfordlawreview.org/wp-content/uploads/sites/3/2012/05/Kahan-64-Stan-L-Rev-851.pdf",
+        "published": "Fri, 09 Jan 2026 13:52:13 +0000",
+        "source": "Hacker News",
+        "summary": "<a href=\"https://news.ycombinator.com/item?id=46553818\">Comments</a>"
+    },
+    {
+        "id": "https://kk.org/thetechnium/how-will-the-miracle-happen-today/",
+        "title": "How Will the Miracle Happen Today?",
+        "link": "https://kk.org/thetechnium/how-will-the-miracle-happen-today/",
+        "published": "Sun, 04 Jan 2026 16:32:13 +0000",
+        "source": "Hacker News",
+        "summary": "<a href=\"https://news.ycombinator.com/item?id=46489514\">Comments</a>"
+    },
+    {
+        "id": "https://practical.engineering/blog/2025/4/15/when-kitty-litter-caused-a-nuclear-catastrophe",
+        "title": "When Kitty Litter Caused a Nuclear Catastrophe",
+        "link": "https://practical.engineering/blog/2025/4/15/when-kitty-litter-caused-a-nuclear-catastrophe",
+        "published": "Sun, 04 Jan 2026 22:47:53 +0000",
+        "source": "Hacker News",
+        "summary": "<a href=\"https://news.ycombinator.com/item?id=46493199\">Comments</a>"
+    },
+    {
+        "id": "https://economictimes.indiatimes.com/tech/funding/ettech-deals-digest-startups-raise-60-million-this-week-down-79-on-year/articleshow/126438748.cms",
+        "title": "ETtech Deals Digest: Startups raise $60 million this week, down 79% on-year",
+        "link": "https://economictimes.indiatimes.com/tech/funding/ettech-deals-digest-startups-raise-60-million-this-week-down-79-on-year/articleshow/126438748.cms",
+        "published": "Fri, 09 Jan 2026 20:54:20 +0530",
+        "source": "Tech-Economic Times",
+        "summary": "The number of deals during the week was also down at just 19 transactions, compared to 34 in the corresponding week last year."
     }
 ]
