📚 Auto-update: News data refreshed - 2026-01-09 17:16 UTC

--- a/knowledge_base.json
+++ b/knowledge_base.json
@@ -48630,5 +48630,69 @@
         "published": "Fri, 09 Jan 2026 20:54:20 +0530",
         "source": "Tech-Economic Times",
         "summary": "The number of deals during the week was also down at just 19 transactions, compared to 34 in the corresponding week last year."
+    },
+    {
+        "id": "https://www.theverge.com/news/859631/democrats-x-grok-apple-google-app-store",
+        "title": "Democrats ask Apple and Google to remove X\u2019s undressing bot from their app stores",
+        "link": "https://www.theverge.com/news/859631/democrats-x-grok-apple-google-app-store",
+        "published": "2026-01-09T11:55:03-05:00",
+        "source": "The Verge",
+        "summary": "Apple and Google are being dragged into the uproar around X's AI chatbot that has continued to virtually undress women in images without their consent this week. In a letter to Apple CEO Tim Cook and Google CEO Sundar Pichai, Sens. Ron Wyden (D-OR), Ben Ray Lujan (D-NM), and Ed Markey (D-MA) wrote that \"X's [&#8230;]"
+    },
+    {
+        "id": "https://www.engadget.com/mobile/the-clicks-co-founder-explains-who-its-tiny-communicator-phone-is-for-170000501.html?src=rss",
+        "title": "The Clicks co-founder explains who its tiny Communicator phone is for",
+        "link": "https://www.engadget.com/mobile/the-clicks-co-founder-explains-who-its-tiny-communicator-phone-is-for-170000501.html?src=rss",
+        "published": "Fri, 09 Jan 2026 17:00:00 +0000",
+        "source": "Engadget is a web magazine with obsessive daily coverage of everything new in gadgets and consumer electronics",
+        "summary": "<p>Clicks is an apologetically gadgety company, making gear that <a class=\"link\" href=\"https://www.engadget.com/clicks-hands-on-a-charming-keyboard-for-2024-thats-relying-on-more-than-just-nostalgia-131537619.html\" target=\"_blank\">feels charmingly out-of-place</a> in a world where almost every smartphone out there is an all-screen slab. That was obviously two years ago when the company first revealed its keyboard case that brought tactile typing to the iPhone and eventually other Android devices"
+    },
+    {
+        "id": "https://www.engadget.com/ai/meta-announces-a-slew-of-nuclear-energy-agreements-165337159.html?src=rss",
+        "title": "Meta announces a slew of nuclear energy agreements",
+        "link": "https://www.engadget.com/ai/meta-announces-a-slew-of-nuclear-energy-agreements-165337159.html?src=rss",
+        "published": "Fri, 09 Jan 2026 16:53:37 +0000",
+        "source": "Engadget is a web magazine with obsessive daily coverage of everything new in gadgets and consumer electronics",
+        "summary": "<p>Meta has <a href=\"https://about.fb.com/news/2026/01/meta-nuclear-energy-projects-power-american-ai-leadership/\"><ins>announced</ins></a> three new agreements to purchase nuclear power for its AI infrastructure as well as the <a href=\"https://www.engadget.com/ai/meta-announces-huge-new-data-centers-but-they-could-gobble-up-millions-of-gallons-of-water-per-day-174000478.html\"><ins>Prometheus supercluster</ins></a>, a 1-gigawatt data center being built in Ohio. The social media giant is partneri"
+    },
+    {
+        "id": "https://xdaforums.com/t/discussion-the-root-and-mod-hiding-fingerprint-spoofing-keybox-stealing-cat-and-mouse-game.4425939/page-118",
+        "title": "The Vietnam government has banned rooted phones from using any banking app",
+        "link": "https://xdaforums.com/t/discussion-the-root-and-mod-hiding-fingerprint-spoofing-keybox-stealing-cat-and-mouse-game.4425939/page-118",
+        "published": "Fri, 09 Jan 2026 17:00:11 +0000",
+        "source": "Hacker News",
+        "summary": "<a href=\"https://news.ycombinator.com/item?id=46555963\">Comments</a>"
+    },
+    {
+        "id": "https://www.zdnet.com/article/wave-browser-helps-wipe-out-your-to-do-list-and-toxic-ocean-waste/",
+        "title": "Wave Browser helps wipe out your to-do list\u2014and toxic ocean waste",
+        "link": "https://www.zdnet.com/article/wave-browser-helps-wipe-out-your-to-do-list-and-toxic-ocean-waste/",
+        "published": "Fri, 09 Jan 2026 16:40:00 GMT",
+        "source": "Latest news",
+        "summary": "The free, Chromium-based, AppEsteem-certified web browser has partnered with 4ocean to help clean up ocean plastic and trash as you surf the web."
+    },
+    {
+        "id": "https://economictimes.indiatimes.com/tech/technology/democratic-senators-demand-apple-google-take-x-and-grok-off-app-stores-over-sexual-images-report/articleshow/126439741.cms",
+        "title": "Democratic senators demand Apple, Google take X and Grok off app stores over sexual images: Report",
+        "link": "https://economictimes.indiatimes.com/tech/technology/democratic-senators-demand-apple-google-take-x-and-grok-off-app-stores-over-sexual-images-report/articleshow/126439741.cms",
+        "published": "Fri, 09 Jan 2026 22:04:53 +0530",
+        "source": "Tech-Economic Times",
+        "summary": "Three Democratic \u2060US senators are \u200ccalling \u200con Apple and \u200cAlphabet's Google to remove X and Grok \u200bfrom \u200btheir respective \u200capp \u200dstores \u200dover the spread of \u200cnonconsensual sexual images of women and \u200dminors on \u200dthe \u2060platforms, \u2060NBC News reported Friday."
+    },
+    {
+        "id": "https://economictimes.indiatimes.com/tech/artificial-intelligence/dutch-couples-marriage-annulled-due-to-chatgpt-speech/articleshow/126439554.cms",
+        "title": "Dutch couple's marriage annulled due to ChatGPT speech",
+        "link": "https://economictimes.indiatimes.com/tech/artificial-intelligence/dutch-couples-marriage-annulled-due-to-chatgpt-speech/articleshow/126439554.cms",
+        "published": "Fri, 09 Jan 2026 21:52:43 +0530",
+        "source": "Tech-Economic Times",
+        "summary": "A Dutch couple had \u200dtheir marriage annulled after \u200bthe person officiating used a ChatGPT-generated \u2060speech that was intended to be playful but failed to meet legal requirements, according to a court \u200cruling published this \u200cweek."
+    },
+    {
+        "id": "https://economictimes.indiatimes.com/tech/technology/lt-semiconductor-technologies-forays-into-cellular-iot-module-business/articleshow/126439432.cms",
+        "title": "L&amp;T Semiconductor Technologies forays into cellular IoT module business",
+        "link": "https://economictimes.indiatimes.com/tech/technology/lt-semiconductor-technologies-forays-into-cellular-iot-module-business/articleshow/126439432.cms",
+        "published": "Fri, 09 Jan 2026 21:41:12 +0530",
+        "source": "Tech-Economic Times",
+        "summary": "The first module, powered by Qualcomm, will be produced in collaboration with Indian EMS partners to ensure scale and quality for deployments in both domestic and global markets."
     }
 ]
