--- a/tech-news-frontend/public/knowledge_base.json
+++ b/tech-news-frontend/public/knowledge_base.json
@@ -48694,5 +48694,117 @@
         "published": "Fri, 09 Jan 2026 21:41:12 +0530",
         "source": "Tech-Economic Times",
         "summary": "The first module, powered by Qualcomm, will be produced in collaboration with Indian EMS partners to ensure scale and quality for deployments in both domestic and global markets."
+    },
+    {
+        "id": "https://techcrunch.com/2026/01/09/meta-signs-deals-with-three-nuclear-companies-for-6-plus-gw-of-power/",
+        "title": "Meta signs deals with three nuclear companies for 6-plus GW of power",
+        "link": "https://techcrunch.com/2026/01/09/meta-signs-deals-with-three-nuclear-companies-for-6-plus-gw-of-power/",
+        "published": "Fri, 09 Jan 2026 17:51:15 +0000",
+        "source": "TechCrunch",
+        "summary": "Two smaller companies, Oklo and TerraPower, along with Vistra, a large energy company, just signed agreements with Meta."
+    },
+    {
+        "id": "https://www.theverge.com/streaming/859699/netflix-black-mirror-season-8",
+        "title": "Black Mirror has been renewed for another season",
+        "link": "https://www.theverge.com/streaming/859699/netflix-black-mirror-season-8",
+        "published": "2026-01-09T13:10:45-05:00",
+        "source": "The Verge",
+        "summary": "In an interview with Netflix's Tudum, Black Mirror creator Charlie Brooker announced today that the sci-fi anthology series will be returning for an eighth season. \"Well, luckily it does have a future, so I can confirm that Black Mirror will return, just in time for reality to catch up with it,\" Brooker said. \"That chunk [&#8230;]"
+    },
+    {
+        "id": "https://www.theverge.com/tech/859023/i-cant-find-the-trump-phone-at-americans-largest-tech-show",
+        "title": "I can\u2019t find the Trump phone at America\u2019s largest tech show",
+        "link": "https://www.theverge.com/tech/859023/i-cant-find-the-trump-phone-at-americans-largest-tech-show",
+        "published": "2026-01-09T13:05:57-05:00",
+        "source": "The Verge",
+        "summary": "Where's the Trump phone? We're going to keep talking about it every week. We've reached out, as usual, to ask about the Trump phone's whereabouts. As usual, we're still waiting for a response. In the meantime, it's nowhere to be found at CES 2026. CES isn't a big smartphone show, but there have been more [&#8230;]"
+    },
+    {
+        "id": "https://www.theverge.com/tech/859525/lego-smart-brick-play-system-now-available-preorder-star-wars-sets",
+        "title": "The first sets with Lego\u2019s new Smart Brick are now available for preorder",
+        "link": "https://www.theverge.com/tech/859525/lego-smart-brick-play-system-now-available-preorder-star-wars-sets",
+        "published": "2026-01-09T12:31:29-05:00",
+        "source": "The Verge",
+        "summary": "It may have been one of the smallest devices announced at CES 2026, but Lego's new Smart Brick was also one of the most talked about debuts of the show. We've recognized it as the \"Best in show\" in our CES 2026 awards, and following the Smart Play system's launch earlier this week, the first [&#8230;]"
+    },
+    {
+        "id": "https://www.theverge.com/games/859551/baldurs-gate-3-larian-studios-gen-ai-concept-art-reddit-ama",
+        "title": "Baldur&#8217;s Gate 3 studio says it won&#8217;t use AI for concept art or writing",
+        "link": "https://www.theverge.com/games/859551/baldurs-gate-3-larian-studios-gen-ai-concept-art-reddit-ama",
+        "published": "2026-01-09T12:20:15-05:00",
+        "source": "The Verge",
+        "summary": "Following some controversy, the developers at Baldur's Gate 3 creator Larian Studios have further clarified their use of generative AI. CEO Swen Vincke and other Larian developers held an AMA on Reddit where they answered users' questions about the team's next title, Divinity. They also fielded questions related to reports that the studio was using [&#8230;]"
+    },
+    {
+        "id": "https://arstechnica.com/space/2026/01/nasa-chief-reviews-orion-heat-shield-expresses-full-confidence-in-it-for-artemis-ii/",
+        "title": "NASA chief reviews Orion heat shield, expresses \u201cfull confidence\u201d in it for Artemis II",
+        "link": "https://arstechnica.com/space/2026/01/nasa-chief-reviews-orion-heat-shield-expresses-full-confidence-in-it-for-artemis-ii/",
+        "published": "Fri, 09 Jan 2026 17:17:41 +0000",
+        "source": "Ars Technica - All content",
+        "summary": "\"That level of openness and transparency is exactly what should be expected of NASA.\""
+    },
+    {
+        "id": "https://arstechnica.com/science/2026/01/these-60000-year-old-poison-arrows-are-oldest-yet-found/",
+        "title": "These 60,000-year-old poison arrows are oldest yet found",
+        "link": "https://arstechnica.com/science/2026/01/these-60000-year-old-poison-arrows-are-oldest-yet-found/",
+        "published": "Fri, 09 Jan 2026 16:49:51 +0000",
+        "source": "Ars Technica - All content",
+        "summary": "Hunter-gatherers probably derived the poison from the milky bulb extract of a <em>Boophone disticha</em> plant."
+    },
+    {
+        "id": "https://arstechnica.com/tech-policy/2026/01/xs-half-assed-attempt-to-paywall-grok-doesnt-block-free-image-editing/",
+        "title": "X\u2019s half-assed attempt to paywall Grok doesn\u2019t block free image editing",
+        "link": "https://arstechnica.com/tech-policy/2026/01/xs-half-assed-attempt-to-paywall-grok-doesnt-block-free-image-editing/",
+        "published": "Fri, 09 Jan 2026 16:46:04 +0000",
+        "source": "Ars Technica - All content",
+        "summary": "Faced with a ban in the United Kingdom, X pushes flawed fix to CSAM problem."
+    },
+    {
+        "id": "https://www.engadget.com/deals/expressvpn-two-year-plans-are-up-to-78-percent-off-right-now-180602025.html?src=rss",
+        "title": "ExpressVPN two-year plans are up to 78 percent off right now",
+        "link": "https://www.engadget.com/deals/expressvpn-two-year-plans-are-up-to-78-percent-off-right-now-180602025.html?src=rss",
+        "published": "Fri, 09 Jan 2026 18:06:03 +0000",
+        "source": "Engadget is a web magazine with obsessive daily coverage of everything new in gadgets and consumer electronics",
+        "summary": "<p>ExpressVPN is <a href=\"https://checkout.expressvpn.com/order\"><ins>back on sale</ins></a> again, and its two-year plans are up to 78 percent off right now. You can get the Advanced tier for $101 for 28 months. This is marked down from the $382 that this time frame normally costs. On a per-month basis, it works out to roughly $3.59 for the promo period.</p> \n<p>\n </p> \n<p>We\u2019ve consistently liked ExpressVPN because it\u2019s fast, easy to use and widely available across a large global server networ"
+    },
+    {
+        "id": "https://www.engadget.com/science/ces-so-very-big-so-little-sustainability-tech-180000648.html?src=rss",
+        "title": "CES: So very big, so little sustainability tech",
+        "link": "https://www.engadget.com/science/ces-so-very-big-so-little-sustainability-tech-180000648.html?src=rss",
+        "published": "Fri, 09 Jan 2026 18:00:00 +0000",
+        "source": "Engadget is a web magazine with obsessive daily coverage of everything new in gadgets and consumer electronics",
+        "summary": "<p>Every third booth at CES showed off some new <a class=\"link\" href=\"https://www.engadget.com/home/smart-home/samsung-unveiled-ai-powered-products-at-ces-2026-everything-announced-from-the-years-first-press-conference-230059247.html\" target=\"_blank\">AI product</a> or other.  If you wanted to find a robotic lawn mower, throw a rock. <a class=\"link\" href=\"https://www.engadget.com/home/smart-home/switchbot-came-to-ces-with-a-laundry-robot-you-might-actually-be-able-to-buy-153000025.html\" target=\"_"
+    },
+    {
+        "id": "https://www.engadget.com/computing/ces-2026-proved-the-pc-industry-is-hosed-this-year-174500314.html?src=rss",
+        "title": "CES 2026 proved the PC industry is hosed this year",
+        "link": "https://www.engadget.com/computing/ces-2026-proved-the-pc-industry-is-hosed-this-year-174500314.html?src=rss",
+        "published": "Fri, 09 Jan 2026 17:45:00 +0000",
+        "source": "Engadget is a web magazine with obsessive daily coverage of everything new in gadgets and consumer electronics",
+        "summary": "<p>Dell's XPS 14 now costs over $2,000. An AMD executive predicts that PC builders will likely make piecemeal upgrades this year, instead of building entirely new systems. And new AI supercomputers from NVIDIA and AMD are gobbling up the RAM market. At CES 2026, it was hard not to notice the dire year ahead for the computing industry, one that will likely lead to higher prices and more limited availability for consumer goods across the board.</p><p>Really, though, the show just confirmed what wa"
+    },
+    {
+        "id": "https://lend-me-your-ears.specr.net",
+        "title": "Show HN: I made a memory game to teach you to play piano by ear",
+        "link": "https://lend-me-your-ears.specr.net",
+        "published": "Fri, 09 Jan 2026 17:17:28 +0000",
+        "source": "Hacker News",
+        "summary": "<a href=\"https://news.ycombinator.com/item?id=46556210\">Comments</a>"
+    },
+    {
+        "id": "https://fredbenenson.com/blog/2026/01/09/why-is-sendgrid-emailing-me-about-supporting-ice/",
+        "title": "Why is SendGrid emailing me about supporting ICE?",
+        "link": "https://fredbenenson.com/blog/2026/01/09/why-is-sendgrid-emailing-me-about-supporting-ice/",
+        "published": "Fri, 09 Jan 2026 16:36:48 +0000",
+        "source": "Hacker News",
+        "summary": "<a href=\"https://news.ycombinator.com/item?id=46555615\">Comments</a>"
+    },
+    {
+        "id": "https://economictimes.indiatimes.com/tech/artificial-intelligence/germany-plans-measures-to-combat-harmful-ai-image-manipulation/articleshow/126440614.cms",
+        "title": "Germany plans measures to combat harmful AI image manipulation",
+        "link": "https://economictimes.indiatimes.com/tech/artificial-intelligence/germany-plans-measures-to-combat-harmful-ai-image-manipulation/articleshow/126440614.cms",
+        "published": "Fri, 09 Jan 2026 22:56:13 +0530",
+        "source": "Tech-Economic Times",
+        "summary": "Germany's justice ministry plans to present measures in the \u200dnear future that would allow \u200bauthorities to more effectively combat the use of artificial \u2060intelligence to manipulate images in ways that violate personal rights, a spokesperson said."
     }
 ]
